--- a/src/Components/MainBlock/mainBlock.module.css
+++ b/src/Components/MainBlock/mainBlock.module.css
@@ -1,9 +1,11 @@
+@import '~styles/spacing.css';
+
 .mainBlock {
   grid-area: mainBlock;
 
   display: flex;
   align-items: center;
-  padding: 16px;
+  padding: var(--space-m);
   margin: 20px 0;
 }
 
@@ -19,10 +21,10 @@
 }
 
 .birdName {
-  padding-left: 10px;
+  padding-left: var(--space-m);
 }
 
 .audio {
   flex-grow: 1;
-  padding: 0 30px;
+  padding: 0 var(--space-l);
 }
