--- a/src/Components/Options/options.module.css
+++ b/src/Components/Options/options.module.css
@@ -1,3 +1,5 @@
+@import '~styles/spacing.css';
+
 .options {
   grid-area: options;
 
@@ -8,6 +10,6 @@
 }
 
 .option {
-  padding: 10px 30px;
+  padding: var(--space-xs) var(--space-l);
   font-weight: bold;
 }
