--- a/src/Components/Player/player.module.css
+++ b/src/Components/Player/player.module.css
@@ -1,15 +1,17 @@
+@import '~styles/spacing.css';
+
 .audioBlock {
   display: flex;
   align-items: center;
 }
 
 .audioDuration {
-  padding: 0 10px;
+  padding: 0 var(--space-s);
   margin: 0;
-  margin-left: 20px;
+  margin-left: var(--space-m);
 }
 
 .button {
-  padding: 10px;
-  margin-right: 20px;
+  padding: var(--space-s);
+  margin-right: var(--space-m);
 }
